# coursera-ml

./: pyproject.toml
coursera_ml/: iris_dataset.ipynb  mnist.ipynb
tests/: test_coursera_ml.py
