[tool.poetry]
name = "coursera-ml"
version = "0.1.0"
description = ""
authors = ["Zach Hornung <zachhornung@comcast.net>"]

[tool.poetry.dependencies]
python = "^3.9"
ipynb = "^0.5.1"
tensorflow = "^2.6.0"
pandas = "^1.3.1"
matplotlib = "^3.4.2"
jupyterlab = "^3.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
